--- a/SOK.Web/Views/Account/AccessDenied.cshtml
+++ b/SOK.Web/Views/Account/AccessDenied.cshtml
@@ -3,8 +3,8 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<p class="text-danger">
+<p class="">
     Nie masz uprawnień, aby zobaczyć tę stronę.
 </p>
 
-<a asp-controller="Account" asp-action="Login" class="btn btn-link">Powrót do logowania</a>
+<a asp-controller="Account" asp-action="Login" class="">Powrót do logowania</a>
