--- a/SOK.Web/wwwroot/css/site.css
+++ b/SOK.Web/wwwroot/css/site.css
@@ -1,3 +1,18 @@
+@import "tailwindcss";
+@plugin "daisyui";
+
+
+:root {
+    --color-primary: var(--color-sky-600);
+    --color-secondary: var(--color-amber-500);
+    --color-neutral: var(--color-gray-400);
+    --color-success: var(--color-green-500);
+    --color-info: var(--color-sky-400);
+    --color-warning: var(--color-yellow-500);
+    --color-error: var(--color-red-600);
+}
+
+
 html {
   font-size: 14px;
 }
@@ -14,7 +29,11 @@ html {
 
 html {
   position: relative;
-  min-height: 100%;
+  height: 100%;
+}
+
+body {
+    height: 100%;
 }
 
 body {
