--- a/SOK.Web/wwwroot/css/site.css
+++ b/SOK.Web/wwwroot/css/site.css
@@ -9,7 +9,7 @@
     --color-success: var(--color-green-500);
     --color-info: var(--color-sky-400);
     --color-warning: var(--color-yellow-500);
-    --color-error: var(--color-red-600);
+    --color-error: var(--color-rose-600);
 }
 
 
