--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -40,6 +40,10 @@
             </div>
         </div>
     </header>
+
+    <div class="absolute top-10 left-1/2 z-20 w-[90vw] -translate-x-1/2 transform lg:w-md xl:w-lg">
+        <partial name="_Notification" />
+    </div>
     
     <main role="main" class="container mx-auto min-h-full pt-16 pb-12">
         @RenderBody()
