--- a/SOK.Web/Views/Home/Index.cshtml
+++ b/SOK.Web/Views/Home/Index.cshtml
@@ -7,4 +7,7 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
     <input type="range" min="0" max="100" value="40" class="range range-primary" />
+
+    <a asp-controller="Account" asp-action="Logout"
+        role="button" class="btn btn-primary">Wyloguj</a>
 </div>
