--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - app</title>
-    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
-    @* <link rel="stylesheet" href="~/app.styles.css" asp-append-version="true" /> *@
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body class="">
     <header class="fixed top-0 left-0 z-10 w-full">
@@ -41,7 +40,7 @@
         </div>
     </header>
 
-    <div class="absolute top-10 left-1/2 z-20 w-[90vw] -translate-x-1/2 transform lg:w-md xl:w-lg">
+    <div class="absolute top-10 left-1/2 z-20 w-[90vw] -translate-x-1/2 transform lg:w-md xl:w-lg" id="notificationContainer">
         <partial name="_Notification" />
     </div>
     
@@ -55,7 +54,6 @@
         </aside>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    @* <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
