--- a/SOK.Web/Views/Shared/_Notification.cshtml
+++ b/SOK.Web/Views/Shared/_Notification.cshtml
@@ -1,34 +1,37 @@
-﻿@{
-    bool showed = false;
-}﻿
-
-@if (TempData["error"] != null)
+﻿@if (TempData["error"] != null)
 {
-    <div role="alert" class="alert alert-error notification font-bold text-white">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-        <span>@TempData["error"]</span>
-    </div>
-    showed = true;
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript" >
+        $(document).ready(() => {
+            notifications.error('@TempData["error"]');
+        });
+    </script>
+}
+@if (TempData["warning"] != null)
+{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(() => {
+            notifications.warning('@TempData["warning"]');
+        });
+    </script>
 }
 @if (TempData["success"] != null)
-{
-    <div role="alert" class="alert alert-success notification">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-        <span>@TempData["success"]</span>
-    </div>
-    showed = true;
-}
-
-@if (showed)
 {
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" >
         $(document).ready(() => {
-            setTimeout(() => $(".notification").remove(), 4000);
+            notifications.success('@TempData["success"]');
+        });
+    </script>
+}
+@if (TempData["info"] != null)
+{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(() => {
+            notifications.info('@TempData["info"]');
         });
     </script>
 }
