--- a/SOK.Web/wwwroot/css/site.css
+++ b/SOK.Web/wwwroot/css/site.css
@@ -12,6 +12,12 @@
     --color-error: var(--color-rose-600);
 }
 
+@layer utilities {
+    .navbar {
+        @apply py-1;
+        min-height: 2rem;
+    }
+}
 
 html {
   font-size: 14px;
