--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -9,22 +9,11 @@
 </head>
 <body class="">
     <header class="fixed top-0 left-0 z-10 w-full">
-        <div class="navbar bg-base-100 shadow-sm">
+        <div class="navbar bg-base-300 shadow-sm">
             <div class="navbar-start">
-                <div class="dropdown">
-                    <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /> </svg>
-                    </div>
-                    <ul tabindex="0"
-                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                        <li><a>Homepage</a></li>
-                        <li><a>Portfolio</a></li>
-                        <li><a>About</a></li>
-                    </ul>
-                </div>
             </div>
             <div class="navbar-center">
-                <a class="btn btn-ghost text-xl">daisyUI</a>
+                <a class="btn btn-ghost text-xl">SOK</a>
             </div>
             <div class="navbar-end">
                 <button class="btn btn-ghost btn-circle">
@@ -44,9 +33,15 @@
         <partial name="_Notification" />
     </div>
     
-    <main role="main" class="container mx-auto min-h-full pt-16 pb-12">
-        @RenderBody()
-    </main>
+    <div class="flex h-full w-full justify-items-center">
+        <div id="sidebar" class="bg-base-300 z-20 flex w-14 flex-col gap-2 px-2 py-2 transition-[width]">
+            <partial name="_Sidebar" />
+        </div>
+
+        <main role="main" class="container mx-auto min-h-full pt-16 pb-12">
+            @RenderBody()
+        </main>
+    </div>
 
     <footer class="footer footer-center bg-base-300 text-base-content fixed bottom-0 left-0 p-4 sm:footer-horizontal">
         <aside>
