Rozwój usług i panelu zgłoszeń
Dodano kilka nowych usług, dodano podstawowy panel, wyświetlający listę zgłoszeń.

--- a/SOK.Web/Views/Home/Index.cshtml
+++ b/SOK.Web/Views/Home/Index.cshtml
@@ -1,13 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Przegląd";
 }
 
+<h1>Strona główna - Przegląd</h1>
+
 <div class="text-center">
-    <h1 class="text-xl">Welcome, @Context.User.FindFirst("DisplayName").Value</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-
-    <input type="range" min="0" max="100" value="40" class="range range-primary" />
-
-    <a asp-controller="Account" asp-action="Logout"
-        role="button" class="btn btn-primary">Wyloguj</a>
+    <h1 class="text-xl">Witaj, @Context.User.FindFirst("DisplayName").Value</h1>
 </div>
