--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewData["Title"] - app</title>
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body class="">
     <header class="fixed top-0 left-0 z-10 w-full">
@@ -13,18 +17,11 @@
             <div class="navbar-start">
             </div>
             <div class="navbar-center">
-                <a class="btn btn-ghost text-xl">SOK</a>
+                <a class="btn btn-ghost text-xl">@(ViewData["Title"] ?? "SOK")</a>
             </div>
             <div class="navbar-end">
-                <button class="btn btn-ghost btn-circle">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /> </svg>
-                </button>
-                <button class="btn btn-ghost btn-circle">
-                    <div class="indicator">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /> </svg>
-                        <span class="badge badge-xs badge-primary indicator-item"></span>
-                    </div>
-                </button>
+                <a asp-controller="Account" asp-action="Logout"
+                   role="button" class="btn btn-primary">Wyloguj</a>
             </div>
         </div>
     </header>
@@ -33,12 +30,12 @@
         <partial name="_Notification" />
     </div>
     
-    <div class="flex h-full w-full justify-items-center">
+    <div class="flex h-full w-full justify-items-center overflow-y-hidden">
         <div id="sidebar" class="bg-base-300 z-20 flex w-14 flex-col gap-2 px-2 py-2 transition-[width]">
             <partial name="_Sidebar" />
         </div>
 
-        <main role="main" class="container mx-auto min-h-full pt-16 pb-12">
+        <main role="main" class="container mx-auto min-h-full overflow-y-scroll px-2.5 pt-16 pb-16">
             @RenderBody()
         </main>
     </div>
