--- a/SOK.Web/wwwroot/css/site.css
+++ b/SOK.Web/wwwroot/css/site.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
+@source "./wwwroot/**/*.js,./Views/**/*.cshtml";
 @plugin "daisyui";
 
-
-:root {
+@theme {
     --color-primary: var(--color-sky-600);
     --color-secondary: var(--color-amber-500);
     --color-neutral: var(--color-gray-400);
@@ -10,6 +10,16 @@
     --color-info: var(--color-sky-400);
     --color-warning: var(--color-yellow-500);
     --color-error: var(--color-rose-600);
+}
+
+@theme {
+    --font-nunito-sans: "Nunito Sans", ui-sans-serif, system-ui;
+    --font-noto-sans: "Noto Sans", ui-sans-serif, system-ui;
+    --font-outfit: "Outfit", ui-sans-serif, system-ui;
+}
+
+body {
+    @apply font-outfit;
 }
 
 @layer utilities {
