Wprowadzanie zgłoszeń i pakiet poprawek i ujednoliceń
Zmieniono model Parish.User na Parish.ParishMember i zmiejszono jego utoższamianie z Central.User, teraz ma tylko pole odnoszące go do Id odpowiedniego Central.User, dodano repozytorium dla niego (ParishMember), dodano SubmitTime bezpośrednio w modelu Submission, dodano metodę do wyciągania pojedynczych informacji z bazy danych w repozytorium dla ParishInfo, wprowadzono zmiany w obiektach DTO, odzwierciedlające wymienione już zmiany, poprawiono działanie SubmissionService i różne mankamenty z nim związane, dodano widok i kontroler wprowadzania nowych zgłoszeń, wprowadzono dynamiczne wyświetlanie czasu wpłynięcia zgłoszenia w panelu zgłoszeń, poprawiono Seeding, aby korzystał z SubmissionService do tworzenia zgłoszeń, utworzono odpowiednie migracje.

--- a/SOK.Web/Views/Account/Login.cshtml
+++ b/SOK.Web/Views/Account/Login.cshtml
@@ -23,10 +23,10 @@
 
             <label asp-for="RememberMe" class="label">
                 <input asp-for="RememberMe" class="checkbox" />
-                @Html.LabelFor(l => l.RememberMe)
+                @Html.LabelFor(m => m.RememberMe)
             </label>
 
-            <button type="submit" class="btn bg-primary mt-2">Zaloguj</button>
+            <button type="submit" class="btn mt-2 bg-primary">Zaloguj</button>
         </fieldset>
     </form>
 </div>
