--- a/SOK.Web/Views/Shared/_Sidebar.cshtml
+++ b/SOK.Web/Views/Shared/_Sidebar.cshtml
@@ -30,9 +30,8 @@
 		</div>
 		Plan kolędy
 	</a>
-	<a asp-controller="Home" asp-action="Index" role="button"
-	   class="flex h-12 w-full cursor-not-allowed items-center gap-1 overflow-x-clip rounded-md transition-colors
-			hover:bg-neutral-700 hover:text-white">
+	<a asp-controller="Submissions" asp-action="New" role="button"
+	   class="flex h-12 w-full items-center gap-1 overflow-x-clip rounded-md transition-colors hover:bg-(--color-primary) hover:text-white">
 		<div class="flex min-w-12 justify-center">
 			<i class="bi bi-plus-square-dotted text-2xl"></i>
 		</div>
