--- a/SOK.Web/Views/_ViewImports.cshtml
+++ b/SOK.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SOK.Web
 @using SOK.Web.ViewModels.Central
+@using SOK.Web.ViewModels.Parish
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
