--- a/SOK.Web/Views/Submissions/Index.cshtml
+++ b/SOK.Web/Views/Submissions/Index.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <!-- lista -->
-        <div class="flex-grow overflow-y-scroll py-2 ps-2 pe-4">
+        <div class="flex-grow overflow-y-scroll py-2 ps-2 pe-4" v-if="submissions.length > 0 || !isDataLoaded">
             <div class="flex flex-col gap-2" id="submissionCardsContainer" style="display: none;">
                 <div v-for="s in submissions" :key="s.id"
                    class="submission-card bg-base-200 grid cursor-pointer grid-cols-[3fr_1fr] grid-rows-[20%_40%_40%] px-4 py-3 transition-colors hover:bg-base-300">
@@ -72,6 +72,16 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="flex h-full flex-grow flex-col items-center justify-center p-5 opacity-70" v-else>
+            <i class="bi bi-dash-lg text-4xl -mt-5 mb-10"></i>
+            <h2 class="text-center text-xl font-semibold">
+                Nie znaleziono zgłoszeń.
+            </h2>
+            <h4 class="text-center text-lg opacity-70">
+                W systemie nie ma zgłoszeń spełniających podane kryteria wyszukiwania.
+            </h4>
         </div>
     </div>
 </div>
