--- a/SOK.Web/Views/Home/Index.cshtml
+++ b/SOK.Web/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <h1>Strona główna - Przegląd</h1>
 
 <div class="text-center">
-    <h1 class="text-xl">Witaj, @Context.User.FindFirst("DisplayName").Value</h1>
+    <h1 class="text-xl">Witaj, @Context.User.FindFirst("DisplayName")!.Value</h1>
 </div>
