--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <div class="absolute top-10 left-1/2 z-20 w-[90vw] -translate-x-1/2 transform lg:w-md xl:w-lg" id="notificationContainer">
+    <div class="absolute top-10 left-1/2 z-20 w-[90vw] -translate-x-1/2 transform lg:w-md xl:w-lg" id="notification-container">
         <partial name="_Notification" />
     </div>
     
