--- a/SOK.Web/Views/Submissions/Index.cshtml
+++ b/SOK.Web/Views/Submissions/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Zgłoszenia";
 }
 
-<div id="submissionsApp" class="h-full">
+<div id="submissions-app" class="h-full">
     <div class="flex h-full">
         <!-- filtr -->
         <div class="flex min-w-1/3 flex-shrink-0 flex-col gap-y-8 overflow-y-scroll p-2 text-center">
@@ -15,9 +15,8 @@
                 <label class="input input-lg w-full">
                     <i class="bi bi-geo-alt-fill"></i>
 
-                    <input v-model="filters.address" v-on:input="loadSubmissions" 
-                        placeholder="np. @(ViewData["SampleAddress"] ?? "Brzozowa 45/3")" 
-                        class="" type="text" />
+                    <input v-model="filters.address" v-on:input="loadSubmissions"
+                        placeholder="np. @(ViewData["SampleAddress"] ?? "Brzozowa 45/3")" class="" type="text" />
                 </label>
             </fieldset>
 
@@ -28,9 +27,8 @@
                 <label class="input input-lg w-full">
                     <i class="bi bi-person-fill"></i>
 
-                    <input v-model="filters.person" v-on:input="loadSubmissions" 
-                        placeholder="np. @(ViewData["SampleSurname"] ?? "Kowalski")..."
-                        class="" type="text" />
+                    <input v-model="filters.person" v-on:input="loadSubmissions"
+                        placeholder="np. @(ViewData["SampleSurname"] ?? "Kowalski")..." class="" type="text" />
                 </label>
             </fieldset>
         </div>
@@ -41,15 +39,16 @@
 
         <!-- lista -->
         <div class="flex-grow overflow-y-scroll py-2 ps-2 pe-4" v-if="submissions.length > 0 || !isDataLoaded">
-            <div class="flex flex-col gap-2" id="submissionCardsContainer" style="display: none;">
+            <div class="flex flex-col gap-2" id="submission-cards-container" style="display: none;">
                 <div v-for="s in submissions" :key="s.id"
-                   class="submission-card bg-base-200 grid cursor-pointer grid-cols-[3fr_1fr] grid-rows-[20%_40%_40%] px-4 py-3 transition-colors hover:bg-base-300">
+                    class="submission-card bg-base-200 grid cursor-pointer grid-cols-[3fr_1fr] grid-rows-[20%_40%_40%] px-4 py-3 transition-colors hover:bg-base-300">
                     <div class="mb-0 opacity-40">
                         <span>{{ s.address.streetType }}</span>
                     </div>
                     <div class="mb-3 text-2xl">
-                        <b>{{ s.address.streetName }}</b> {{ s.address.buildingNumber }}{{ s.address.buildingLetter }} 
-                        <span class="ms-3 text-lg opacity-60">m.</span> {{ s.address.apartmentNumber }}{{ s.address.apartmentLetter }}
+                        <b>{{ s.address.streetName }}</b> {{ s.address.buildingNumber }}{{ s.address.buildingLetter }}
+                        <span class="ms-3 text-lg opacity-60">m.</span> {{ s.address.apartmentNumber }}{{
+                        s.address.apartmentLetter }}
                     </div>
                     <div class="text-md opacity-80">
                         <b>{{ s.submitter.surname }}</b> {{ s.submitter.name }}
@@ -63,7 +62,8 @@
                 </div>
 
                 <!-- lista dummy do ładowania -->
-                <div v-if="!isDataLoaded" v-for="n in 10" :key="n" class="bg-base-200 grid cursor-default grid-cols-[3fr_1fr] grid-rows-[20%_40%_40%] gap-y-2 px-4 py-3">
+                <div v-if="!isDataLoaded" v-for="n in 10" :key="n"
+                    class="bg-base-200 grid cursor-default grid-cols-[3fr_1fr] grid-rows-[20%_40%_40%] gap-y-2 px-4 py-3">
                     <div class="skeleton mb-0 h-4 w-20 rounded-sm opacity-60"></div>
                     <div class="skeleton mb-3 h-7 w-40 rounded-sm text-2xl"></div>
                     <div class="text-md skeleton h-4 w-32 rounded-sm opacity-80"></div>
@@ -86,72 +86,76 @@
     </div>
 </div>
 
-<script src="https://unpkg.com/vue@3"></script>
-<script>
-    const { createApp } = Vue;
+@section Scripts {
+    <partial name="_VueScript" />
+    
+    <script>
+        const { createApp } = Vue;
 
-    createApp({
-      data() {
-        return {
-          submissions: [],
-          filters: {
-            address: "",
-            person: "",
-          },
-          isDataLoaded: false,
-        }
-      },
-      mounted() {
-        document.querySelector("#submissionCardsContainer").style.display = "";
-        this.loadSubmissions();
-      },
-      methods: {
-        async loadSubmissions() {
-          this.isDataLoaded = false;
+        createApp({
+            data() {
+                return {
+                    submissions: [],
+                    filters: {
+                        address: "",
+                        person: "",
+                    },
+                    isDataLoaded: false,
+                }
+            },
+            mounted() {
+                document.querySelector("#submission-cards-container").style.display = "";
+                this.loadSubmissions();
+            },
+            methods: {
+                async loadSubmissions() {
+                    this.isDataLoaded = false;
 
-          let response = await fetch(`/api/submissions?address=${encodeURIComponent(this.filters.address)}&submitter=${encodeURIComponent(this.filters.person)}`);
-          this.submissions = await response.json();
-        
-          console.log(this.submissions);
+                    let response = await fetch(`/api/submissions?address=${encodeURIComponent(this.filters.address)}&submitter=${encodeURIComponent(this.filters.person)}`);
+                    this.submissions = await response.json();
 
-          this.submissions.forEach(s => {
-              s.timeAgo = computeTimeDiffString(s.submitTime + "Z");
-          });
+                    console.log(this.submissions);
 
-          this.isDataLoaded = true;
-        },
-      }
-    }).mount("#submissionsApp");
+                    this.submissions.forEach(s => {
+                        s.timeAgo = computeTimeDiffString(s.submitTime + "Z");
+                    });
 
-    function computeNounEnding(number, declination) {
-        if (number == 1) return declination[0];
-        if (number > 10 && number < 20) return declination[2];
-        if ((number % 10) >= 2 && (number % 10) <= 4) return declination[1];
-        return declination[2];
-    };
-    function computeTimeDiffString(date) {
-        let diff = Date.now() - new Date(date);
-        let interval = {
-            seconds: Math.floor(diff / 1000),
-            minutes: Math.floor(diff / (1000 * 60)),
-            hours: Math.floor(diff / (1000 * 60 * 60)),
-            days: Math.floor(diff / (1000 * 60 * 60 * 24)),
-            weeks: Math.floor(diff / (1000 * 60 * 60 * 24 * 7)),
-            months: Math.floor(diff / (1000 * 60 * 60 * 24 * 30)),
-            years: Math.floor(diff / (1000 * 60 * 60 * 24 * 365))
-        }
+                    this.isDataLoaded = true;
+                },
+            }
+        }).mount("#submissions-app");
 
-        if (interval.years)
-            return `${interval.years} ${computeNounEnding(interval.years, ["rok", "lata", "lat"])} temu`;
-        if (interval.months)
-            return `${interval.months} ${computeNounEnding(interval.months, ["miesiąc", "miesiące", "miesięcy"])} temu`;
-        if (interval.days)
-            return `${interval.days} ${computeNounEnding(interval.days, ["dzień", "dni", "dni"])} temu`;
-        if (interval.hours)
-            return `${interval.hours} ${computeNounEnding(interval.hours, ["godzinę", "godziny", "godzin"])} temu`;
-        if (interval.minutes)
-            return `${interval.minutes} ${computeNounEnding(interval.minutes, ["minutę", "minuty", "minut"])} temu`;
+        function computeNounEnding(number, declination) {
+            if (number == 1) return declination[0];
+            if (number > 10 && number < 20) return declination[2];
+            if ((number % 10) >= 2 && (number % 10) <= 4) return declination[1];
+            return declination[2];
+        };
+        function computeTimeDiffString(date) {
+            let diff = Date.now() - new Date(date);
+            let interval = {
+                seconds: Math.floor(diff / 1000),
+                minutes: Math.floor(diff / (1000 * 60)),
+                hours: Math.floor(diff / (1000 * 60 * 60)),
+                days: Math.floor(diff / (1000 * 60 * 60 * 24)),
+                weeks: Math.floor(diff / (1000 * 60 * 60 * 24 * 7)),
+                months: Math.floor(diff / (1000 * 60 * 60 * 24 * 30)),
+                years: Math.floor(diff / (1000 * 60 * 60 * 24 * 365))
+            }
 
-        return `${interval.seconds} ${computeNounEnding(interval.seconds, ["sekundę", "sekundy", "sekund"])} temu`;
-    };
-</script>
+            if (interval.years)
+                return `${interval.years} ${computeNounEnding(interval.years, ["rok", "lata", "lat"])} temu`;
+            if (interval.months)
+                return `${interval.months} ${computeNounEnding(interval.months, ["miesiąc", "miesiące", "miesięcy"])} temu`;
+            if (interval.days)
+                return `${interval.days} ${computeNounEnding(interval.days, ["dzień", "dni", "dni"])} temu`;
+            if (interval.hours)
+                return `${interval.hours} ${computeNounEnding(interval.hours, ["godzinę", "godziny", "godzin"])} temu`;
+            if (interval.minutes)
+                return `${interval.minutes} ${computeNounEnding(interval.minutes, ["minutę", "minuty", "minut"])} temu`;
+
+            return `${interval.seconds} ${computeNounEnding(interval.seconds, ["sekundę", "sekundy", "sekund"])} temu`;
+        };
+    </script>
+
+}
