--- a/SOK.Web/Views/Submissions/New.cshtml
+++ b/SOK.Web/Views/Submissions/New.cshtml
@@ -102,7 +102,7 @@
             <div class="divider col-span-full mt-5">
                 <button type="submit" class="btn btn-primary w-1/3">Dodaj</button>
                 <label class="btn btn-soft swap w-1/6">
-                    <input type="checkbox" id="formExtender" />
+                    <input type="checkbox" id="form-extender" />
                     <div class="swap-on">-&nbsp;&nbsp;Mniej</div>
                     <div class="swap-off">+&nbsp;&nbsp;Więcej</div>
                 </label>
@@ -126,14 +126,14 @@
 	});
 
     document.addEventListener("DOMContentLoaded", function () {
-        const formExtender = document.getElementById("formExtender");
+        const form-extender = document.getElementById("form-extender");
 
         const emailInput = document.getElementById("Email").parentElement.parentElement;
         const phoneInput = document.getElementById("Phone").parentElement.parentElement;
         const submitterNotes = document.getElementById("SubmitterNotes").parentElement.parentElement;
         const adminNotes = document.getElementById("AdminNotes").parentElement.parentElement;
 
-        formExtender.addEventListener("change", function () {
+        form-extender.addEventListener("change", function () {
             const extended = this.checked;
 
             if (extended) {
