--- a/SOK.Web/Views/Shared/_Sidebar.cshtml
+++ b/SOK.Web/Views/Shared/_Sidebar.cshtml
@@ -9,6 +9,7 @@
 		public string Icon { get; set; } = string.Empty;
 		public bool Disabled { get; set; } = false;
 		public bool Active { get; set; } = false;
+		public bool OffsetSection { get; set; } = false;
 	}
 }
 
@@ -24,7 +25,7 @@
 @{
 	var activePage = ViewData["ActivePage"] as string;
 
-	var menuOptions = new List<SidebarOption>
+	var menuItems = new List<SidebarOption>
 	{
 		new SidebarOption
 		{
@@ -58,14 +59,26 @@
 			Icon = "plus-square-dotted",
 			Active = activePage == "NewSubmission",
 		},
+		new SidebarOption() 
+		{
+			DisplayName = "Ustawienia",
+			Controller = "Settings",
+			Action = "Index",
+			Icon = "gear",
+			Active = activePage == "Settings",
+			OffsetSection = true,
+		},
 	};
 }
 
-<div class="font-noto-sans flex flex-col gap-1 text-lg font-medium whitespace-nowrap">
-	@foreach (var option in menuOptions)
+<div class="font-noto-sans flex flex-col flex-1 gap-1 text-lg font-medium whitespace-nowrap">
+	@foreach (var option in menuItems)
 	{
 		<a asp-controller="@option.Controller" asp-action="@option.Action" role="button"
-			class="flex h-12 w-full items-center gap-1 overflow-x-clip rounded-md transition-colors hover:bg-primary hover:text-white @(option.Active ? "bg-base-100 text-white" : "") @(option.Disabled ? "opacity-50 pointer-events-none cursor-not-allowed" : "")">
+			class="flex h-12 w-full items-center gap-1 overflow-x-clip rounded-md transition-colors hover:bg-primary hover:text-white 
+					@(option.Active ? "bg-base-100 text-white" : "") 
+					@(option.Disabled ? "opacity-50 pointer-events-none cursor-not-allowed" : "") 
+					@(option.OffsetSection ? "mt-auto" : "")">
 			<div class="flex min-w-12 justify-center">
 				<i class="bi bi-@option.Icon text-2xl"></i>
 			</div>
