--- a/SOK.Web/Views/Settings/Index.cshtml
+++ b/SOK.Web/Views/Settings/Index.cshtml
@@ -31,7 +31,7 @@
         new SettingsOption() {
             Name = "Adresy",
             Description = "Zarządzaj adresacją w twojej parafii - dodawaj ulice i bramy, edytuj je i usuwaj.",
-            Action = "Adressess",
+            Action = "Streets",
             Icon = "building-fill-gear",
         },
         new SettingsOption() {
